@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2831436 by borisson_, drunken monkey: Added dependency information to
+  display plugins.
 - #2836994 by dermario: Fixed order of facets in DB backend unreliable.
 - #2839445 by borisson_: Fixed test failure in for some Core versions.
 - #2833229 by timcosgrove: Removed array type hinting for batch contexts.
